--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,24 @@
-.App {
-  color: blue;
-  text-align: center;
+.mainWrapper{
+  width: 600px;
+  height: 800px;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
 }
-.ms{
-  color: blueviolet;
+
+.messageList{
+  width: 100%;
+  height: 90%;
+  border-bottom: 1px solid black;
+}
+.inputWrapper{
+  flex: 1;
+  width: 100%;
+  background-color: gray;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.input{
+  width: 70%;
 }
