--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 .messageList{
   width: 100%;
   height: 90%;
+  /* min-height: 800px; */
   border-bottom: 1px solid black;
 }
 .inputWrapper{
@@ -18,6 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  vertical-align: bottom;
 }
 .input{
   width: 70%;
