--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 .inputWrapper{
   flex: 1;
   width: 100%;
-  background-color: gray;
+  /* background-color: gray; */
   display: flex;
   align-items: center;
   justify-content: space-around;
